--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
   - docker push extramagnetdavid/fib-client
   - docker push extramagnetdavid/fib-api
   - docker push extramagnetdavid/fib-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'us-east-2'
+  app: 'fib-complex'
+  env: 'Fibcomplex-env'
+  bucket_name: 'elasticbeanstalk-us-east-2-264856337147'
+  bucket_path: 'docker-multi'
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
